src/css/Modal.scss
@use 'utils/main' as *;

.hopkins-hurdle {
  .modal-container {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 500;

    .overlay {
      background-color: $black;
      height: 100%;
      left: 0;
      opacity: 0.5;
      position: absolute;
      top: 0;
      width: 100%;
    }

    .modal-content {
      background-color: $white;
      margin: auto;
      padding: 20px;
      position: relative;
      text-align: left;
      width: 50%;

      button {
        float: right;

        &:hover {
          cursor: pointer;
        }
      }
    }
  }
}

